# nntrainer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ANDROID_BUILD_PATCH_SUMMARY.md  ANDROID_BUILD_SUPPORT_SUMMARY.md  AndroidManifest.xml  BUILD_MACOS.md  CAUSALLM_ANDROID_BUILD_SUMMARY.md  CAUSALLM_ANDROID_MESON_UPDATE.md  CAUSALLM_ANDROID_NATIVE_PATCH.md  CMakeLists.txt  CONTRIBUTING.md  Final_Corrected_Implementation_Summary.md  MACOS_PATCH_SUMMARY.md  Memory_Optimization_Details.md  MoE_Optimization_Summary.md  MoE_Performance_Improvements.md  NOTICE  OPTIMIZATION_SUMMARY.md  PR3587_REVIEW.md  PR_3291_Review_Report.md  README.md  README_FIX.md  README_GGML_PATCH.md  README_MoE_Optimizations.md  RELEASE.md  Zero_Copy_Optimization_Details.md  abseil_libs.txt  accurate_q4k_converter.py  build.gradle  build_android_complete.sh  build_android_with_fp16.sh  build_causallm_android.sh  build_for_llama.sh  build_windows_resources.py  causallm_android_build_patch.patch  code_comparison_analysis.md  compare_outputs.py  comprehensive_nntrainer_performance_audit.md  (+71 more)
Applications/: README.md  meson.build  prepare_tflite.sh
Applications/AlexNet/: README.md
Applications/CausalLM/: ANDROID_BUILD_SUMMARY.md  README.md  README_ANDROID.md  android_build_patch.diff  build_android.sh  build_tokenizer_android.sh  causal_lm.cpp  causal_lm.h  causallm_android_api.cpp  causallm_android_api.h  ernie_causallm.cpp  ernie_causallm.h  factory.h  gptoss_cached_slim_causallm.cpp  gptoss_cached_slim_causallm.h  gptoss_causallm.cpp  gptoss_causallm.h  install_android.sh  llm_util.cpp  llm_util.hpp  main.cpp  meson.build  meson_android.build  nntr_qwen3_causallm.cpp  nntr_qwen3_causallm.h  nntr_qwen3_moe_causallm.cpp  nntr_qwen3_moe_causallm.h  qwen3_cached_slim_moe_causallm.cpp  qwen3_cached_slim_moe_causallm.h  qwen3_causallm.cpp  qwen3_causallm.h  qwen3_moe_causallm.cpp  qwen3_moe_causallm.h  qwen3_slim_moe_causallm.cpp  qwen3_slim_moe_causallm.h  test_android.sh  test_build.sh  tokenizers_c.h  tokenizers_cpp.h
Applications/Classification/: README.md
Applications/Custom/: README.md  mae_loss.cpp  mae_loss.h  meson.build  momentum.cpp  momentum.h  pow.cpp  pow.h  rnnt_loss.cpp  rnnt_loss.h
Applications/Embedding/: README.md
Applications/Inference/: main.cpp  meson.build
Applications/KNN/: README.md
Applications/LLaMA/: README.md
Applications/LSTM/: README.md
Applications/Layers/: README.md
Applications/LogisticRegression/: README.md
Applications/MNIST/: MNIST.vcxproj  MNIST.vcxproj.filters  README.md
Applications/Multi_input/: Readme.md
Applications/Optimizers/: README.md
Applications/PicoGPT/: README.md
Applications/ProductRatings/: README.md
Applications/Qwen3MoE/: README.md
Applications/RefineDet/: meson.build  refinedet_loss.cpp  refinedet_loss.h
Applications/Resnet/: README.md
Applications/SimpleFC/: nntrainer
Applications/SimpleShot/: README.md  meson.build  simpleshot_utils.cpp  task_runner.cpp
Applications/TFlite_export/: README.md  main.cpp  meson.build
Applications/TensorFlow/: Training_tf.py
Applications/Tizen_CAPI/: Tizen_CAPI_config.ini  c_api.c  capi_file.c  capi_func.c  main.c  meson.build
Applications/Training/: README.md
Applications/TransferLearning/: How-to-gen-tflite-model.md  import_pb_to_tensorboard.py  meson.build
Applications/YOLO/: main.cpp
Applications/YOLOv3/: readme.md
Applications/toy_classification/: main.cpp  meson.build  model.ini  run.sh
Applications/utils/: mem_usage.sh  meson.build
DeepQ/: CMakeLists.txt  README.md  gym_binding.cpp  main.cpp  matrix.cpp  neuralnet.cpp
DeepQ/include/: matrix.h  neuralnet.h
DeepQ/jni/: Android.mk  CMakeLists.txt  DeepQ.ini  gym_binding.cpp  main.cpp
Environment/CartPole/: CMakeLists.txt  cartpole.cpp  cartpole.h  main.cpp
LogisticRegression/jni/: Android.mk  CMakeLists.txt  main.cpp
Training/jni/: Android.mk  CMakeLists.txt  bitmap_helpers.cpp  bitmap_helpers.h  demo.cpp  main.cpp  matrix.cpp  matrix.h  neuralnet.cpp  neuralnet.h
api/capi/: capi-ml-training.pc.in  capi-nntrainer.pc.in  meson.build
api/ccapi/: ccapi-ml-training.pc.in  ccapi-nntrainer.pc.in  meson.build  option1.h  option2.h  option3.h  option3_hide.h  option3_hide_updated.h  option4.h  option4_hide.h
benchmarks/benchmark_application/: benchmark_resnet.cpp  meson.build
jni/: Android-prebuilt.mk  Android.mk  Android.mk.in  Application.mk  meson.build  prepare_encoder.ps1  prepare_encoder.sh  prepare_ggml.sh  prepare_iniparser.sh  prepare_ml-api-common.sh  prepare_ml-api.sh  prepare_openblas.sh  prepare_opencl.sh  prepare_protobuf.sh  prepare_tflite.sh
nnstreamer/tensor_filter/: meson.build  tensor_filter_nntrainer.cc  tensor_filter_nntrainer.hh
nnstreamer/tensor_trainer/: generated_path.h.in  meson.build  tensor_trainer_nntrainer.cc  tensor_trainer_nntrainer.hh
nntrainer/: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  app_context.cpp  app_context.h  build_windows_resources.py  cl_buffer_manager.cpp  cl_buffer_manager.h  cl_context.cpp  cl_context.h  context.h  context_data.cpp  context_data.h  cuda_context.cpp  cuda_context.h  defines.h  delegate.h  device_context.cpp  device_context.h  device_info.cpp  device_info.h  engine.cpp  engine.h  manager.h  mem_allocator.cpp  mem_allocator.h  meson.build  nntrainer.vcxproj  nntrainer.vcxproj.filters  nntrainer_error.h  nntrainer_log.h  nntrainer_logger.cpp  nntrainer_logger.h  qnn_context.cpp  setProperty
nntrainer/.github/: PULL_REQUEST_TEMPLATE.md
nntrainer/api/: meson.build
nntrainer/compiler/: activation_realizer.cpp  activation_realizer.h  bn_realizer.cpp  bn_realizer.h  compiler.cpp  compiler.h  compiler_fwd.h  flatbuffer_interpreter.cpp  flatbuffer_interpreter.h  flatbuffer_opnode.cpp  flatbuffer_opnode.h  flatten_realizer.cpp  flatten_realizer.h  ini_interpreter.cpp  ini_interpreter.h  input_realizer.cpp  input_realizer.h  interpreter.h  loss_realizer.cpp  loss_realizer.h  meson.build  multiout_realizer.cpp  multiout_realizer.h  onnx.proto  (+21 more)
test/: meson.build  nntrainer_test_util.cpp  unittestcoverage.py
(+2305 files in other folders)
